--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,6 +42,7 @@ section {
   margin-right: 0;
   margin-left: 0;
   width: 15%;
+  text-align: center;
 }
 
 .hero-images{
@@ -200,6 +201,24 @@ section {
   text-shadow: none;
 }
 
+.archieve a {
+  text-decoration: none;
+  color: white;
+  font-family: Garamond;
+  font-size: 1.2rem;
+  /* font-weight: bolder; */
+  padding: 1 10px;
+  text-align: center;
+  text-shadow: 0 0 10px rgba(0, 0, 0, 0.375);
+  
+}
+
+.archieve a:hover {
+  color: rgb(162, 158, 158);
+  border-radius: 15px;
+  text-shadow: none;
+}
+
 .report{
   text-align: center;
   font-family: 'Times New Roman', garamond, serif;
@@ -217,6 +236,11 @@ section {
   text-align: left;
   padding-left: 1.25rem;
   font-size: 1.5rem;
+  font-weight: bold;
+}
+
+.reportText span{
+  font-style: italic;
   font-weight: bold;
 }
 
