--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -216,6 +216,51 @@ section {
   text-shadow: none;
 }
 
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown div {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 100%;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 999 !important;
+}
+
+.dropdown div a {
+  background-color: white; /* Background color of the dropdown links */
+  color: black; /* Font color of the dropdown links */
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  font-family: Garamond;
+  font-size: 1rem;
+  text-align: left;
+}
+
+.dropdown-content a:hover {
+  background-color: #f1f1f1;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+.dropdown a {
+  text-decoration: none;
+  color: white;
+  font-family: Garamond;
+  font-size: 1.2rem;
+  padding: 10px;
+  text-align: center;
+  text-shadow: 0 0 10px rgba(0, 0, 0, 0.375);
+  background-color: #333; /* Background color for main button */
+  display: inline-block;
+}
+
 .report {
   text-align: center;
   font-family: "Times New Roman", garamond, serif;
@@ -252,6 +297,7 @@ section {
 }
 
 .footer {
+  text-align: left;
   margin-bottom: 10%;
   font-weight: bolder;
   font-size: 1.25rem;
@@ -262,6 +308,8 @@ section {
 .footer span {
   font-style: italic;
 }
+
+
 
 /* MEDIA QUERY FOR TABLETS AND SMALLER */
 @media screen and (max-width: 1120px) {
